public enum TopicKind {
    REGULAR,
    ANNOUNCEMENT,
    NEWS
}
